# project_blockchain_mainer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gateway.go  go.mod  go.sum  to_do.md
.github/workflows/: CI.yml
ccpkg/: blockchain.grpc.pb.cc  blockchain.grpc.pb.h  blockchain.pb.cc  blockchain.pb.h  suggest.grpc.pb.cc  suggest.grpc.pb.h  suggest.pb.cc  suggest.pb.h
cmake/: config.cmake
include/: DBConnection.hpp  DBRepo.hpp  Mainer.hpp  Transac_struct.hpp  blockchain.hpp  blockhain.hpp  suggestions.hpp  transaction.hpp
protos/: blockchain.proto  echo.proto  sugest.proto  suggest.proto
sources/: DBConnection.cpp  DBRepo.cpp  Mainer.cpp  blockhain.hpp  go_to_server.txt  main.cpp  pull_unfirmed_transac.hpp  suggestion.json  suggestions.cpp  transaction.cpp  utility.hpp
